WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314885
REGRESSION (
309405@main
): CSS stretch and anonymous wrappers
https://bugs.webkit.org/show_bug.cgi?id=314885
Summary
REGRESSION (309405@main): CSS stretch and anonymous wrappers
Anne van Kesteren
Reported
2026-05-15 02:43:56 PDT
.
Attachments
Patch
(14.40 KB, patch)
2026-05-15 14:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(22.17 KB, patch)
2026-05-15 19:16 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2026-05-15 02:43:59 PDT
<
rdar://problem/176398251
>
Anne van Kesteren
Comment 2
2026-05-15 02:53:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64983
alan
Comment 3
2026-05-15 14:05:37 PDT
Created
attachment 479682
[details]
Patch
alan
Comment 4
2026-05-15 19:16:39 PDT
Created
attachment 479688
[details]
[fast-cq]Patch
EWS
Comment 5
2026-05-16 07:53:28 PDT
Committed
313359@main
(8479656c1999): <
https://commits.webkit.org/313359@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479688
[details]
.
Sammy Gill
Comment 6
2026-05-21 10:37:27 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/60079
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug