REGRESSION (309405@main): CSS stretch and anonymous wrappers https://bugs.webkit.org/show_bug.cgi?id=314885 rdar://176398251

Reviewed by NOBODY (OOPS!).

Stretch height calculation should work in the same way as percentage
height calculation, by skipping anonymous wrappers. Not doing this
properly caused at least one website to not render its iframe at
viewport height.

Fix is verified with new tests and behavior matches Chromium and Gecko
(though the latter only when stretch keyword support is enabled).

Tests: imported/w3c/web-platform-tests/css/css-sizing/stretch/stretch-anonymous-block-001.html
       imported/w3c/web-platform-tests/css/css-sizing/stretch/stretch-quirk-002.html

Upstream: https://github.com/web-platform-tests/wpt/pull/59896